--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@ build/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Allow front-end contract artifacts
+!src/build/
+!src/build/contracts/
+!src/build/contracts/*
+!defi-staking-app-starter/src/build/
+!defi-staking-app-starter/src/build/contracts/
+!defi-staking-app-starter/src/build/contracts/*
